# open-vm-tools

./: README.md  SOLARIS.md  build.sh  clean.sh  new-cert.sh  open-vm-tools-header.p5m
macos-build/: README.md  build.sh  clean.sh
open-vm-tools/: Makefile.am  configure.ac
open-vm-tools/hgfsmounter/: Makefile.am  hgfsmounter.c
open-vm-tools/lib/auth/: authPosix.c
open-vm-tools/lib/dynxdr/: dynxdr.c
open-vm-tools/lib/file/: file.c  fileIO.c  filePosix.c  fileTempPosix.c
open-vm-tools/lib/guestApp/: guestApp.c
open-vm-tools/lib/hgfs/: cpName.c  cpNameLinux.c  hgfsEscape.c
open-vm-tools/lib/hgfsHelper/: hgfsHelperPosix.c
open-vm-tools/lib/hgfsServer/: hgfsServerLinux.c
open-vm-tools/lib/hgfsServerPolicyGuest/: hgfsServerPolicyGuest.c
open-vm-tools/lib/hgfsUri/: hgfsUriPosix.c
open-vm-tools/lib/include/: cpName.h  hgfsDevLinux.h  hgfsUtil.h  iovector.h  mntinfo.h  posix.h  sigPosixRegs.h  su.h  util.h  vm_basic_defs.h  vm_basic_types.h  vm_product.h  vmblock.h  vmblock_user.h  vmxrpc.h
open-vm-tools/lib/lock/: ulSema.c
open-vm-tools/lib/misc/: codeset.c  codesetOld.c  hostinfoPosix.c  idLinux.c  miscSolaris.c  posixPosix.c  posixPwd.c  sha1.c  timeutil.c  utilMacos.h  util_misc.c  vthreadBase.c
open-vm-tools/lib/netUtil/: netUtilLinux.c
open-vm-tools/lib/nicInfo/: nicInfoPosix.c
open-vm-tools/lib/procMgr/: procMgrPosix.c  procMgrSolaris.c
open-vm-tools/lib/rpcVmx/: rpcvmx.c
open-vm-tools/lib/sslDirect/: sslStubs.c
open-vm-tools/lib/string/: str.c
open-vm-tools/lib/system/: systemLinux.c
open-vm-tools/lib/user/: utilBacktrace.c
open-vm-tools/libDeployPkg/: linuxDeployment.c  processPosix.c
open-vm-tools/libappmonitor/: Makefile.am
open-vm-tools/libguestlib/: Makefile.am
open-vm-tools/libhgfs/: Makefile.am
open-vm-tools/libvmtools/: Makefile.am
open-vm-tools/pam/: solaris
open-vm-tools/scripts/: Makefile.am
open-vm-tools/vmblockmounter/: Makefile.am  vmblockmounter.c
open-vm-tools/vmhgfs-fuse/: cache.c  config.c  fsutil.h  module.h
open-vm-tools/vmware-user-suid-wrapper/: main.c
solaris-build/: README.md  build.sh  clean.sh  open-vm-tools-footer.p5m  open-vm-tools-header.p5m  renamed-ovt.p5m
(+77 files in other folders)
